# PIA-ESTD

./: CMakeLists.txt  baja.cpp  main.cpp  pilas.cpp
include/: alta.h  baja.h  grupos.h  inscripcion.h  listas.h  modificacion.h  pilas.h  recuperar.h  reportes.h  validaciones.h
src/: alta.cpp  baja.cpp  grupos.cpp  inscripcion.cpp  listas.cpp  modificacion.cpp  pilas.cpp  recuperar.cpp  reportes.cpp  validaciones.cpp
